--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,20 @@
+Skip to content
+
+Search or jump to…
+
+Pull requests
+Issues
+Marketplace
+Explore
+ @YCPTimMcKenna Sign out
+0
+0 0 YCPTimMcKenna/Sandbox
+ Code  Issues 0  Pull requests 0  Projects 0  Wiki  Insights  Settings
+Sandbox/css/main.css
+d98a504  37 minutes ago
+@YCPTimMcKenna YCPTimMcKenna Final Show Poster
+
+519 lines (408 sloc)  9.22 KB
 /*! HTML5 Boilerplate v6.1.0 | MIT License | https://html5boilerplate.com/ */
 
 /*
@@ -9,6 +26,9 @@
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
+
+@import url('https://fonts.googleapis.com/css?family=Raleway:400,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700,900');
 
 html {
     color: #222;
@@ -97,21 +117,144 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-.maincontent{
-  width: 100%;
-  height: 100%;
-  position: relative;
+/* Global Body Styles */
+
+body{
+background-color: #585752;
+font-family: 'Roboto', sans-serif;
 }
-.HeroContent{
+
+.concrete_overlay{
+  background-image: url('../img/Textured_Background.png');
+  background-repeat: repeat;
+  width: 100%;
+}
+
+/* Header */
+
+header{
+  background-color: #585752;
+  width: 100%;
+  height: 80px;
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
 }
 
-.coolbox{
-
+.header_logo{
+  width: 62.7px;
+  height: auto;
 }
+
+/* Hero Section Styles */
+
+.HeroSection{
+  background-image: url('../img/AFI_hero.jpg');
+  width: 100%;
+  height: 720px;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow: hidden;
+}
+
+/* Concent Details Section */
+
+.Concert_Details{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  flex-direction: column;
+}
+
+.Lineup{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  color: #fff;
+  flex-direction: column;
+}
+
+.Lineup h1{
+  font-size: 100px;
+  text-transform: uppercase;
+  font-weight: 700;
+  margin: 0;
+}
+
+.Lineup p{
+  font-size: 36px;
+  font-weight: 400;
+}
+
+.Lineup h2 {
+  font-size: 74px;
+  font-weight: 700;
+  margin: 0 0 25px 0;
+}
+
+.Concert_Dates{
+  width: 90%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  padding: 15px;
+  color: #fff;
+}
+
+.Dates{
+  margin: 20px;
+  font-weight: 500;
+}
+
+.Dates ul{
+  list-style: none;
+}
+
+.Dates ul li{
+  padding: 3px;
+  font-size: 24px
+}
+
+/* Tickets */
+
+.Tickets{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.Tickets button{
+  width: 230px;
+  height: 60px;
+  border: 3px solid #fff;
+  border-radius: 35px;
+  background-color: rgba(0,0,0,0);
+  margin: 30px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.Tickets button:hover{
+  border: 3px solid #F89500;
+  color: #F89500;
+}
+
+.Tickets a{
+  color: #fff;
+  font-weight: 900;
+  font-size: 30px;
+}
+
+
+
 
 
 
@@ -210,65 +353,101 @@ textarea {
    Modify as content requires.
    ========================================================================== */
 
-@media (max-width: 1440px) and (min-width: 769px){
-    /* Style adjustments for viewports that meet the condition */
-    .HeroContent{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 0 auto;
-      flex-wrap: wrap;
-      flex-direction: row;
-    }
-
-    .coolbox{
-      width: 475px;
-      height: 350px;
-      background-color: pink;
-      margin: 52px 93px 52px 93px;
-    }
-
-}
-
-@media (max-width: 768px) and (min-width: 376px){
+@media screen and (max-width: 1280px) {
     /* Style adjustments for viewports that meet the condition */
 
-    .HeroContent{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 0 auto;
-      flex-wrap: wrap;
-      flex-direction: row;
-    }
-
-    .coolbox{
-      width: 185px;
-      height: 190px;
-      background-color: #DA4A4A;
-      margin: 32px;
-    }
 
 
 }
 
-@media (max-width: 375px) and (min-width: 0px){
+@media screen and (max-width: 1024px) {
     /* Style adjustments for viewports that meet the condition */
-    .HeroContent{
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      margin: 0 auto;
-      flex-direction: column;
-      width: 80%;
+
+
+}
+
+@media screen and (max-width: 768px) {
+    /* Style adjustments for viewports that meet the condition */
+
+    header{
+      height: 100px;
     }
 
-    .coolbox{
-      width: 228px;
-      height: 190px;
-      background-color: blue;
-      margin: 54px;
+    .HeroSection{
+      height: 432px;
     }
+
+    .header_logo{
+      width: 80px;
+    }
+
+    .Concert_Dates {
+    width: 95%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    padding: 10px;
+    color: #fff;
+    }
+
+    .Dates{
+      width: 100%;
+      margin: 0;
+    }
+
+    .Dates ul li{
+      font-size: 15px;
+    }
+
+
+}
+
+@media screen and (max-width: 360px) {
+    /* Style adjustments for viewports that meet the condition */
+
+    header{
+      height: 100px;
+    }
+
+    .HeroSection{
+      height: 202px;
+    }
+
+    .Lineup h1{
+      font-size: 50px;
+    }
+
+    .Lineup p{
+      font-size: 14px;
+    }
+
+    .Lineup h2 {
+      font-size: 30px;
+    }
+
+    .Concert_Dates {
+    flex-direction: column;
+    }
+
+    .Dates {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    padding: 0;
+    }
+
+    .Dates ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .Dates ul li{
+      text-align: center;
+    }
+
 
 }
 
@@ -354,3 +533,16 @@ textarea {
         page-break-after: avoid;
     }
 }
+© 2019 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Help
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
+Press h to open a hovercard with more details.
