--- a/css/main.css
+++ b/css/main.css
@@ -252,7 +252,12 @@ header{
   font-weight: 900;
   font-size: 30px;
 }
+.About{
+font-family: "Roboto", sans-serif;
+color: #fff;
+width: 80%;
 
+}
 
 
 
